c++/src/Compression.cc
@@ -60,6 +60,7 @@ namespace orc {
 
     virtual std::string getName() const override = 0;
     virtual uint64_t flush() override;
+    virtual void suppress() override;
 
     virtual bool isCompressed() const override { return true; }
     virtual uint64_t getSize() const override;
@@ -127,6 +128,12 @@ namespace orc {
     BufferedOutputStream::BackUp(outputSize - outputPosition);
     bufferSize = outputSize = outputPosition = 0;
     return BufferedOutputStream::flush();
+  }
+
+  void CompressionStreamBase::suppress() {
+    outputBuffer = nullptr;
+    bufferSize = outputPosition = outputSize = 0;
+    BufferedOutputStream::suppress();
   }
 
   uint64_t CompressionStreamBase::getSize() const {
@@ -927,6 +934,7 @@ DIAGNOSTIC_POP
     }
 
     virtual bool Next(void** data, int*size) override;
+    virtual void suppress() override;
     virtual std::string getName() const override = 0;
 
   protected:
@@ -993,6 +1001,11 @@ DIAGNOSTIC_POP
     compressorBuffer.resize(estimateMaxCompressionSize());
 
     return true;
+  }
+
+  void BlockCompressionStream::suppress() {
+    compressorBuffer.resize(0);
+    CompressionStreamBase::suppress();
   }
 
   /**
